k8s/postgres-isystems-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-isystems
  name: postgres-isystems
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: postgres-isystems
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.26.1 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/isystems: "true"
        io.kompose.service: postgres-isystems
    spec:
      containers:
        - env:
            - name: POSTGRES_DATABASE
              value: isystems_challenge
            - name: POSTGRES_PASSWORD
              value: isystemns
            - name: POSTGRES_USER
              value: isystemns
          image: postgres:14.1
          name: postgres-isystems
          ports:
            - containerPort: 5432
          resources: {}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data/
              name: postgres-isystems-claim0
      restartPolicy: Always
      volumes:
        - name: postgres-isystems-claim0
          persistentVolumeClaim:
            claimName: postgres-isystems-claim0
status: {}
