k8s/challenge-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  # creationTimestamp: "null"
  labels:
    io.kompose.service: challenge-api
  name: challenge-api
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    io.kompose.service: challenge-api
status:
  loadBalancer: {}
