k8s/postgres-isystems-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: postgres-isystems
  name: postgres-isystems
spec:
  ports:
    - name: "5001"
      port: 5001
      targetPort: 5432
  selector:
    io.kompose.service: postgres-isystems
status:
  loadBalancer: {}
