k8s/isystems-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: isystems
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/isystems: "true"
  podSelector:
    matchLabels:
      io.kompose.network/isystems: "true"
